<resources>
    <string name="app_name">App_Compra_y_Venta</string>
    <string name="default_web_client_id">664042999726-n60cd8vhhigvqd49lfklhma4lrn6f541.apps.googleusercontent.com</string>
    <string name="google_maps_api_key">AIzaSyDcbcohBjuFA_ws9JyIadNIS34ss89hNSc</string>

    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_Vender">Vender</string>
    <string name="Item_Mis_Anuncios">Anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>

    <string name="TituloRL">Título</string>

    <string name="Ingresar_Email">Ingresar con email</string>
    <string name="Ingresar_Google">Ingresar con Google</string>

    <string name="Txt_Login">Login de Usuario</string>
    <string name="Et_Email">Email</string>
    <string name="Et_Password">Password</string>
    <string name="Btn_Ingresar">Ingresar</string>
    <string name="Txt_No_Cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_Registrarme">REGISTRARME</string>

    <string name="Txt_Registro">Registro de Usuario</string>
    <string name="Et_r_Password">Repetir Contraseña</string>
    <string name="Btn_Registrar">Registrar</string>

    <!-- Perfil Usuario (Fragment Cuenta) -->
    <string name="Txt_Perfil">Perfil de Usuario</string>
    <string name="Txt_Informacion">Información: </string>
    <string name="Txt_Nombres">Nombre: </string>
    <string name="Tv_Nombres">Nombre completo:</string>
    <string name="Txt_Email">Email: </string>
    <string name="Tv_Email">email@dominio.com</string>
    <string name="Txt_Nacimiento">Fecha de nacimiento: </string>
    <string name="Tv_Nacimiento">dd/mm/aaaa</string>
    <string name="Txt_Miembro">Miembro desde: </string>
    <string name="Tv_Miembro">dd/mm/aaaa</string>
    <string name="Txt_Telefono">Teléfono: </string>
    <string name="Tv_Telefono">999999999</string>
    <string name="Txt_Estado_Cuenta">Estado de cuenta: </string>
    <string name="Tv_Estado_Cuenta">No Verificado</string>

    <string name="Txt_Opciones">Opciones</string>
    <string name="Btn_Editar_Perfil">Editar Perfil</string>
    <string name="Btn_Cerrar_Sesion">Cerrar Sesión</string>
    <string name="Btn_Cambiar_Passsword">Cambiar contraseña</string>
    <string name="Btn_Verificar_Cuenta">Verificar cuenta</string>
    <string name="Btn_Eliminar_Anuncios">Eliminar mis anuncios</string>
    <string name="Btn_Eliminar_Cuenta">Eliminar cuenta</string>

    <!--Editar Perfil-->
    <string name="Txt_Editar_Perfil">Editar Perfil</string>
    <string name="Et_Nombres">Nombre Completo</string>
    <string name="Et_Fecha_Nacimiento">Fecha de Nacimiento</string>
    <string name="Cod_Tel">+00</string>
    <string name="Et_Telefono">Teléfono</string>
    <string name="Btn_Actualizar">Actualizar</string>

    <!-- Crear Anuncio -->
    <string name="Et_Marca">Nombre de la marca</string>
    <string name="Et_Categoria">Categoría</string>
    <string name="Condicion">Condición</string>
    <string name="Ubicación">Ubicación</string>
    <string name="Et_Precio">Precio</string>
    <string name="Et_Titulo">Titulo</string>
    <string name="Et_Descripcion">Descripción</string>
    <string name="Btn_Crear_Anuncio">Crear Anuncio</string>
    <string name="Ubicacion">Ubicación</string>

    <!-- Mapas -->
    <string name="Txt_Seleccionar_Ubicacion">Seleccione Ubicación</string>
    <string name="Btn_listo">Listo</string>

    <!-- Fragmento Inicio -->
    <string name="Tv_Ubicacion">Elija una ubicación</string>
    <string name="Et_buscar">Buscar</string>
    <string name="Txt_Categoria">Categorías</string>
    <string name="Tv_Categoria">Categoría</string>
    <string name="Tv_Feedback">No hay anuncios cerca de la ubicación especificada</string>

    <!-- Item Anuncio -->
    <string name="Tv_Titulo">Nombre del producto</string>
    <string name="Tv_Descripcion">Descripción del producto, se podrá visualizar un máximo de 3 líneas</string>
    <string name="Tv_Direccion">Dirección</string>
    <string name="Tv_Condicion">Nuevo</string>
    <string name="Tv_Simbolo_Precio">€</string>
    <string name="Tv_Precio">00</string>
    <string name="Tv_Fecha">dd/MM/yyyy</string>

    <string name="Txt_Detalle_Info">Detalle del anuncio</string>
    <string name="Tv_Categoria_Detalle">Categoría del anuncio</string>
    <string name="Txt_titulo">Título</string>
    <string name="Txt_Descipcion">Descripción</string>
    <string name="Tv_Descripcion_Detalle">Descripción del anuncio</string>
    <string name="Txt_Direccion">Dirección</string>
    <string name="Txt_Descripcion_Vendedor">Descripción del vendedor</string>
    <string name="Txt_Estado">Estado</string>
    <string name="Tv_Estado">Disponible</string>
    <string name="Txt_Visitas">Número de visitas del anuncio:</string>
    <string name="Tv_Visitas">0</string>

    <!-- Opciones del detalle anuncio -->
    <string name="Btn_mapa">Map</string>
    <string name="Btn_llamar">LLam</string>
    <string name="Btn_SMS">SMS</string>
    <string name="Btn_Chat">Chat</string>

    <string name="imagen_Contador_Tv">1</string>

    <!-- Cuadro de diálogo eliminar Imagen -->
    <string name="Txt_Eliminar">¿Estás seguro de querer eliminar la imagen?</string>
    <string name="Btn_Si">Si</string>
    <string name="Btn_Cancelar">Cancelar</string>

    <!-- Cuadro de diálogo marcar como vendido -->
    <string name="Txt_Marcar_Vendido">¿Estás seguro de querer marcar como vendido el producto?</string>

    <!-- Detalle Vendedor-->
    <string name="Txt_Perfil_Vendedor">Perfil del Vendedor</string>
    <string name="Txt_Anuncios">Anuncios publicados:</string>
    <string name="Tv_Num_Anuncios">0</string>
    <string name="Tv_No_Hay_Anuncios">Este usuario no tiene anuncios publicados</string>

    <!--Comentarios -->
    <string name="Txt_Comentarios">Comentarios</string>
    <string name="Txt_Agregar">Agregar un comentario</string>
    <string name="Et_Agregar_Comentario">Escriba un comentario</string>
    <string name="Btn_Comentar">Comentar</string>
    <string name="Tv_Nombre_Comentarios">Nombre completo</string>
    <string name="Tv_Fecha_Comentario">dd/MM/yyyy</string>
    <string name="Tv_Comentario">Comentario del usuario</string>

    <!-- Recuperación de contraseña -->
    <string name="Txt_Olvide_Password">He olvidado mi contraseña</string>
    <string name="Tv_Recuperar">Recuperar</string>
    <string name="Txt_Olvide_Mi_Password">Olvidé mi contraseña</string>
    <string name="Txt_Instrucciones">¿Olvidó su contraseña? Ingrese su correo electrónico registrado.
    Le enviaremos las instrucciones de recuperarión.</string>
    <string name="Btn_Enviar_Instrucciones">Enviar</string>

    <!-- Actualizar contraseña -->
    <string name="Txt_Cambiar_Password">Cambiar contraseña</string>
    <string name="Txt_Instrucciones_Cambio_Password">Su nueva contraseña debe ser diferente a la actual</string>
    <string name="Et_Password_Actual">Contraseña actual</string>
    <string name="Et_Password_Nueva">Contraseña nueva</string>
    <string name="Et_Password_Nueva_R">Repita la nueva contraseña</string>
    <string name="Btn_Actualizar_Password">Actualizar contraseña</string>

    <!-- Chat -->
    <string name="Txt_Nombre_Vendedor_Chat">Nombre del vendedor</string>
    <string name="Et_Mensaje_Chat">Escriba algo</string>
    <string name="Tv_Tiempo_Mensaje">dd/MM/yyyy hh:mm</string>
    <string name="Btn_Cerrar_Visualizar">Cerrar</string>

    <!-- Eliminar Cuenta -->
    <string name="Txt_Eliminar_Cuenta">Eliminar Cuenta</string>
    <string name="Txt_Mensaje_Eliminar">¿Estás seguro que deseas eliminar tu cuenta? Esta acción no se puede deshacer</string>
    <string name="Btn_Eliminar_Mi_Cuenta">Eliminar mi cuenta</string>
    <string name="Tv_Feedback_Chats">No tienes conversaciones con otros usuarios</string>

    <!-- Fragment Anuncios -->
    <string name="Tv_Feedback_Mis_Anuncios">No tienes anuncios publicados</string>
    <string name="Tv_Feedback_Mis_Favoritos">No tienes ningún anuncio como favorito</string>
</resources>