<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".Fragmentos.FragmentCuenta">

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/Txt_Perfil"
            android:text="@string/Txt_Perfil"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Iv_Perfil"
            android:layout_below="@id/Txt_Perfil"
            android:src="@drawable/img_perfil"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/Txt_Informacion"
            android:text="@string/Txt_Informacion"
            android:layout_below="@id/Iv_Perfil"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Nombres -->
        <TextView
            android:id="@+id/Txt_Nombres"
            android:text="@string/Txt_Nombres"
            android:layout_below="@id/Txt_Informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_Nombres"
            android:text="@string/Tv_Nombres"
            android:layout_below="@id/Txt_Informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Email -->
        <TextView
            android:id="@+id/Txt_Email"
            android:text="@string/Txt_Email"
            android:layout_below="@id/Txt_Nombres"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_Email"
            android:text="@string/Tv_Email"
            android:layout_below="@id/Tv_Nombres"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Fecha de Nacimiento -->
        <TextView
            android:id="@+id/Txt_Nacimiento"
            android:text="@string/Txt_Nacimiento"
            android:layout_below="@id/Txt_Email"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_Nacimiento"
            android:text="@string/Tv_Nacimiento"
            android:layout_below="@id/Tv_Email"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Miembro desde -->
        <TextView
            android:id="@+id/Txt_Miembro"
            android:text="@string/Txt_Miembro"
            android:layout_below="@id/Txt_Nacimiento"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_Miembro"
            android:text="@string/Tv_Miembro"
            android:layout_below="@id/Tv_Nacimiento"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Teléfono -->
        <TextView
            android:id="@+id/Txt_Telefono"
            android:text="@string/Txt_Telefono"
            android:layout_below="@id/Txt_Miembro"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_Telefono"
            android:text="@string/Tv_Telefono"
            android:layout_below="@id/Tv_Miembro"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Estado de la cuenta -->
        <TextView
            android:id="@+id/Txt_Estado_Cuenta"
            android:text="@string/Txt_Estado_Cuenta"
            android:layout_below="@id/Txt_Telefono"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_Estado_Cuenta"
            android:text="@string/Tv_Estado_Cuenta"
            android:layout_below="@id/Tv_Telefono"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/Txt_Opciones"
            android:text="@string/Txt_Opciones"
            android:layout_below="@id/Txt_Estado_Cuenta"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Editar Perfil-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Editar_Perfil"
            android:text="@string/Btn_Editar_Perfil"
            android:layout_below="@id/Txt_Opciones"
            android:textAllCaps="true"
            app:icon="@drawable/ic_editar"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_centerInParent="true"/>

        <!--Actualizar Contraseña-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Cambiar_Passsword"
            android:text="@string/Btn_Cambiar_Passsword"
            android:layout_below="@id/Btn_Editar_Perfil"
            android:textAllCaps="true"
            app:icon="@drawable/ic_password"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_centerInParent="true"/>

        <!--Verificar cuenta-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Verificar_Cuenta"
            android:text="@string/Btn_Verificar_Cuenta"
            android:layout_below="@id/Btn_Cambiar_Passsword"
            android:textAllCaps="true"
            app:icon="@drawable/ic_verificar_cuenta"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_centerInParent="true"/>

        <!--Cerrar Sesión-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_Cerrar_Sesion"
            android:text="@string/Btn_Cerrar_Sesion"
            android:layout_below="@id/Btn_Verificar_Cuenta"
            android:textAllCaps="true"
            app:icon="@drawable/ic_cerrar_sesion"
            android:layout_width="220dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_centerInParent="true"/>


    </RelativeLayout>
</ScrollView>