<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleAnuncio.DetalleAnuncio">

    <!-- Toolbar-->
    <RelativeLayout
        android:id="@+id/ToolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_Regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Editar -->
        <ImageButton
            android:id="@+id/Ib_Editar"
            android:src="@drawable/ic_editar_anuncio"
            android:background="@android:color/transparent"
            android:layout_toStartOf="@+id/Ib_Eliminar"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Eliminar -->
        <ImageButton
            android:id="@+id/Ib_Eliminar"
            android:src="@drawable/ic_eliminar"
            android:background="@android:color/transparent"
            android:layout_toStartOf="@+id/Ib_fav"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Favorito - No Favorito -->
        <ImageButton
            android:id="@+id/Ib_fav"
            android:src="@drawable/ic_no_favorito"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <!-- Información del anuncio -->
    <ScrollView
        android:layout_below="@id/ToolbarRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Mostraremos la imágenes del anuncio -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/Imagen_SliderVP"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <!-- Símbolo del precio -->
            <TextView
                android:id="@+id/Tv_Simbolo_Precio"
                android:text="@string/Tv_Simbolo_Precio"
                android:layout_below="@id/Imagen_SliderVP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Precio -->
            <TextView
                android:id="@+id/Tv_Precio"
                android:text="@string/Tv_Precio"
                android:layout_below="@id/Imagen_SliderVP"
                android:layout_toEndOf="@id/Tv_Simbolo_Precio"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Condición -->
            <TextView
                android:id="@+id/Tv_Condicion"
                android:layout_below="@id/Imagen_SliderVP"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/Tv_Condicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Fecha de publicación -->
            <TextView
                android:id="@+id/Tv_Fecha"
                android:text="@string/Tv_Fecha"
                android:layout_below="@id/Imagen_SliderVP"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/Txt_Detalle_Info"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="13dp"
                android:layout_centerInParent="true"
                android:text="@string/Txt_Detalle_Info"
                android:layout_below="@id/Tv_Fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Txt de categoría -->
            <TextView
                android:id="@+id/Tv_Categoria"
                android:layout_below="@id/Txt_Detalle_Info"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/Tv_Categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Categoría -->
            <TextView
                android:id="@+id/Tv_Categoria_Detalle"
                android:layout_below="@id/Tv_Categoria"
                android:text="@string/Tv_Categoria_Detalle"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Txt título -->
            <TextView
                android:id="@+id/Txt_titulo"
                android:text="@string/Txt_titulo"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/Tv_Categoria_Detalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Título -->
            <TextView
                android:id="@+id/Tv_Titulo"
                android:text="@string/Tv_Titulo"
                android:layout_below="@id/Txt_titulo"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Txt Descripción -->
            <TextView
                android:id="@+id/Txt_Descipcion"
                android:text="@string/Txt_Descipcion"
                android:textStyle="bold"
                android:layout_below="@id/Tv_Titulo"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Descripción -->
            <TextView
                android:id="@+id/Tv_Descripcion_Detalle"
                android:text="@string/Tv_Descripcion_Detalle"
                android:layout_below="@id/Txt_Descipcion"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Txt Dirección -->
            <TextView
                android:id="@+id/Txt_Direccion"
                android:text="@string/Txt_Direccion"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_below="@id/Tv_Descripcion_Detalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Dirección -->
            <TextView
                android:id="@+id/Tv_Direccion"
                android:layout_below="@id/Txt_Direccion"
                android:layout_marginTop="5dp"
                android:text="@string/Tv_Direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/Txt_Descripcion_Vendedor"
                android:text="@string/Txt_Descripcion_Vendedor"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_below="@id/Tv_Direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/perfilVendeor"
                android:layout_below="@id/Txt_Descripcion_Vendedor"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- Imagen de perfil del vendeor -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_perfil"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/img_perfil"
                        app:shapeAppearance="@style/ImageStyle_Circle"/>

                    <!-- Nombres del vendedor -->
                    <TextView
                        android:id="@+id/Tv_Nombres"
                        android:textStyle="bold|italic"
                        android:layout_marginStart="7dp"
                        android:layout_toEndOf="@id/img_perfil"
                        android:text="@string/Tv_Nombres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/Txt_Miembro"
                        android:text="@string/Txt_Miembro"
                        android:layout_toEndOf="@id/img_perfil"
                        android:layout_below="@id/Tv_Nombres"
                        android:layout_marginStart="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <!-- Fecha de Registro -->
                    <TextView
                        android:id="@+id/Tv_Miembro"
                        android:layout_toEndOf="@id/Txt_Miembro"
                        android:layout_below="@id/Tv_Nombres"
                        android:layout_marginStart="5dp"
                        android:text="@string/Tv_Miembro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>